// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Memosheet test render test 1`] = `
<DocumentFragment>
  <div
    class="memo-sheet"
  >
    <div
      class="memo-sheet"
    >
      <div
        class="post-it"
        style="background: rgb(255, 255, 255);"
      >
        <h1
          class="post-title"
        >
          title1
        </h1>
        <hr
          class="post-line"
        />
        <p
          class="post-description"
        >
          description1
        </p>
      </div>
      <div
        class="post-it"
        style="background: rgb(255, 255, 255);"
      >
        <h1
          class="post-title"
        >
          title2
        </h1>
        <hr
          class="post-line"
        />
        <p
          class="post-description"
        >
          description2
        </p>
      </div>
      <div
        class="post-it"
        style="background: rgb(255, 255, 255);"
      >
        <h1
          class="post-title"
        >
          title3
        </h1>
        <hr
          class="post-line"
        />
        <p
          class="post-description"
        >
          description3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Memosheet test send to modal render test 1`] = `
<DocumentFragment>
  <div
    class="memo-sheet"
  >
    <div
      class="memo-modal"
      style="background: rgb(255, 255, 255);"
    >
      <div
        class="modal-contents"
      >
        <h1>
          title1
        </h1>
        <hr
          class="line"
        />
        <h3>
          description1
        </h3>
        <button>
          Update
        </button>
        <button>
          Close
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
